5_Lists/2_PowerShell_ListMethods
Python 3.7.5 (tags/v3.7.5:5c02a39a0b, Oct 15 2019, 00:11:34) [MSC v.1916 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>>
>>>
>>>
>>> l = [22,33,44,5544,554,32,43,23]
>>>
>>> l[0]
22
>>> type(l)
<class 'list'>
>>> l[3]
5544
>>> zoom.us/j/97781745820
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'zoom' is not defined
>>> zoom.us/j/97781745820
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'zoom' is not defined
>>>
>>>
>>>
>>>
>>>
>>>
>>>
>>> l
[22, 33, 44, 5544, 554, 32, 43, 23]
>>>
>>>
>>> r = range(10)
>>> r
range(0, 10)
>>> list(r)
[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
>>>
>>>
>>>
>>>
>>>
>>> l
[22, 33, 44, 5544, 554, 32, 43, 23]
>>> l.append(100)
>>> l
[22, 33, 44, 5544, 554, 32, 43, 23, 100]
>>>
>>>
>>> l
[22, 33, 44, 5544, 554, 32, 43, 23, 100]
>>> l.append(20,30,40,50)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: append() takes exactly one argument (4 given)
>>> l.append([20,30,40,50])
>>> l
[22, 33, 44, 5544, 554, 32, 43, 23, 100, [20, 30, 40, 50]]
>>> l[-1]
[20, 30, 40, 50]
>>>
>>>
>>> l
[22, 33, 44, 5544, 554, 32, 43, 23, 100, [20, 30, 40, 50]]
>>> l = [22, 33, 44, 5544, 554, 32, 43, 23, 100]
>>>
>>>
>>>
>>>
>>>
>>>
>>> l
[22, 33, 44, 5544, 554, 32, 43, 23, 100]
>>> l.extend([101,102,103,104])
>>> l
[22, 33, 44, 5544, 554, 32, 43, 23, 100, 101, 102, 103, 104]
>>> l[-1]
104
>>> ]
  File "<stdin>", line 1
    ]
    ^
SyntaxError: invalid syntax
>>>
>>>
>>>
>>>
>>>
>>>
>>> l
[22, 33, 44, 5544, 554, 32, 43, 23, 100, 101, 102, 103, 104]
>>> m = ['a','b','c']
>>> m
['a', 'b', 'c']
>>> l.append(m)
>>> l
[22, 33, 44, 5544, 554, 32, 43, 23, 100, 101, 102, 103, 104, ['a', 'b', 'c']]
>>> l.pop()
['a', 'b', 'c']
>>>
>>>
>>>
>>>
>>> l
[22, 33, 44, 5544, 554, 32, 43, 23, 100, 101, 102, 103, 104]
>>> m
['a', 'b', 'c']
>>> l.extend(m)
>>> l
[22, 33, 44, 5544, 554, 32, 43, 23, 100, 101, 102, 103, 104, 'a', 'b', 'c']
>>> l[-1]
'c'
>>> len(l)
16
>>>
>>>
>>>
>>>
>>>
>>> l
[22, 33, 44, 5544, 554, 32, 43, 23, 100, 101, 102, 103, 104, 'a', 'b', 'c']
>>> l[3]
5544
>>> l.insert(3,66)
>>> l
[22, 33, 44, 66, 5544, 554, 32, 43, 23, 100, 101, 102, 103, 104, 'a', 'b', 'c']
>>> l[3]
66
>>> l[4]
5544
>>> l.insert(0,1)
>>> l
[1, 22, 33, 44, 66, 5544, 554, 32, 43, 23, 100, 101, 102, 103, 104, 'a', 'b', 'c']
>>>
>>>
>>>
>>>
>>>
>>> m
['a', 'b', 'c']
>>> m.clear()
>>> m
[]
>>> len(m)
0
>>>
>>>
>>>
>>>
>>> l
[1, 22, 33, 44, 66, 5544, 554, 32, 43, 23, 100, 101, 102, 103, 104, 'a', 'b', 'c']
>>> l.pop()
'c'
>>> l
[1, 22, 33, 44, 66, 5544, 554, 32, 43, 23, 100, 101, 102, 103, 104, 'a', 'b']
>>> x = l.pop()
>>> l
[1, 22, 33, 44, 66, 5544, 554, 32, 43, 23, 100, 101, 102, 103, 104, 'a']
>>> x
'b'
>>>
>>>
>>>
>>>
>>>
>>>
>>>
>>> l
[1, 22, 33, 44, 66, 5544, 554, 32, 43, 23, 100, 101, 102, 103, 104, 'a']
>>> l.pop(3)
44
>>> l
[1, 22, 33, 66, 5544, 554, 32, 43, 23, 100, 101, 102, 103, 104, 'a']
>>> l.pop(0)
1
>>> l
[22, 33, 66, 5544, 554, 32, 43, 23, 100, 101, 102, 103, 104, 'a']
>>>
>>>
>>>
>>>
>>> l
[22, 33, 66, 5544, 554, 32, 43, 23, 100, 101, 102, 103, 104, 'a']
>>> l.remove(5544)
>>> l
[22, 33, 66, 554, 32, 43, 23, 100, 101, 102, 103, 104, 'a']
>>> l
[22, 33, 66, 554, 32, 43, 23, 100, 101, 102, 103, 104, 'a']
>>> l.remove('a')
>>> l
[22, 33, 66, 554, 32, 43, 23, 100, 101, 102, 103, 104]
>>>
>>>
>>>
>>> l[1]
33
>>> del l[1]
>>> l
[22, 66, 554, 32, 43, 23, 100, 101, 102, 103, 104]
>>> m
[]
>>> m.extend([1,2,3,4])
>>> m
[1, 2, 3, 4]
>>> del m
>>> m
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'm' is not defined
>>>
>>>
>>> l
[22, 66, 554, 32, 43, 23, 100, 101, 102, 103, 104]
>>> l.index(554)
2
>>> l.index(103)
9
>>> l[9]
103
>>> l
[22, 66, 554, 32, 43, 23, 100, 101, 102, 103, 104]
>>>
>>>
>>>
>>>
>>>
>>> l.append(100)
>>> l.append(22)
>>> l.append(32)
>>>
>>>
>>>
>>>
>>> l
[22, 66, 554, 32, 43, 23, 100, 101, 102, 103, 104, 100, 22, 32]
>>> l.index(100)
6
>>> l.index(100,7)
11
>>> l.index[11]
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: 'builtin_function_or_method' object is not subscriptable
>>> l[11]
100
>>>
>>>
>>> l.index(11)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ValueError: 11 is not in list
>>>
>>>
>>>
>>> l
[22, 66, 554, 32, 43, 23, 100, 101, 102, 103, 104, 100, 22, 32]
>>> l.index(100,7,10)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ValueError: 100 is not in list
>>> l.index(100,7,11)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ValueError: 100 is not in list
>>> l.index(100,7,12)
11
>>>
>>>
>>>
>>>
>>> l
[22, 66, 554, 32, 43, 23, 100, 101, 102, 103, 104, 100, 22, 32]
>>> l.append(100)
>>> l
[22, 66, 554, 32, 43, 23, 100, 101, 102, 103, 104, 100, 22, 32, 100]
>>> l.index(100)
6
>>> l.index(100,7,12)
11
>>> l[11]
100
>>> l.index(22,7,12)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ValueError: 22 is not in list
>>> l.index(100)
6
>>> l.index(100)
6
>>>
>>>
>>>
>>>
>>> l
[22, 66, 554, 32, 43, 23, 100, 101, 102, 103, 104, 100, 22, 32, 100]
>>> l.count(100)
3
>>> l.count(22)
2
>>> l.count(101010)
0
>>> l.count(101010)
0
>>>
>>>
>>>
>>> l
[22, 66, 554, 32, 43, 23, 100, 101, 102, 103, 104, 100, 22, 32, 100]
>>> l.reverse()
>>> l
[100, 32, 22, 100, 104, 103, 102, 101, 100, 23, 43, 32, 554, 66, 22]
>>> l.reverse()
>>> l
[22, 66, 554, 32, 43, 23, 100, 101, 102, 103, 104, 100, 22, 32, 100]
>>>
>>>
>>> l.sort()
>>> l
[22, 22, 23, 32, 32, 43, 66, 100, 100, 100, 101, 102, 103, 104, 554]
>>> l.sort()
>>> l
[22, 22, 23, 32, 32, 43, 66, 100, 100, 100, 101, 102, 103, 104, 554]
>>>
>>>
>>>
>>> l
[22, 22, 23, 32, 32, 43, 66, 100, 100, 100, 101, 102, 103, 104, 554]
>>>
>>>
>>>
>>>
>>>
>>> m = ['Python','is','an','amazing','language']
>>> m
['Python', 'is', 'an', 'amazing', 'language']
>>> len(m)
5
>>> type(m)
<class 'list'>
>>> m[0]
'Python'
>>> m[1]
'is'
>>> m[-1]
'language'
>>>
>>>
>>> m
['Python', 'is', 'an', 'amazing', 'language']
>>>
>>>
>>> m.join(' ')
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: 'list' object has no attribute 'join'
>>>
>>>
>>>
>>> ' '.join(m)
'Python is an amazing language'
>>> m
['Python', 'is', 'an', 'amazing', 'language']
>>> x = ' '.join(m)
>>> x = ' '.join(m)
>>> x
'Python is an amazing language'
>>> type(x)
<class 'str'>
>>> m
['Python', 'is', 'an', 'amazing', 'language']
>>> x = ':::'.join(m)
>>> x
'Python:::is:::an:::amazing:::language'
>>> x = 'jdsfkjdbfdkh'.join(m)
>>> x
'Pythonjdsfkjdbfdkhisjdsfkjdbfdkhanjdsfkjdbfdkhamazingjdsfkjdbfdkhlanguage'
>>>
>>>
>>> x
'Pythonjdsfkjdbfdkhisjdsfkjdbfdkhanjdsfkjdbfdkhamazingjdsfkjdbfdkhlanguage'
>>> x = '\n'.join(m)
>>> x
'Python\nis\nan\namazing\nlanguage'
>>> print(x)
Python
is
an
amazing
language
>>>
>>>
>>>
>>> x = ' '.join(m)
>>> x
'Python is an amazing language'
>>> x = ' '.join(l)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: sequence item 0: expected str instance, int found
>>> l
[22, 22, 23, 32, 32, 43, 66, 100, 100, 100, 101, 102, 103, 104, 554]
>>>
>>>
>>>
>>> x = ' '.join(m)
>>> x
'Python is an amazing language'
>>>
>>>
>>>
>>>
>>> s = 'somestring'
>>> s[2:]
'mestring'
>>> s[2:7]
'mestr'
>>> s = abcdefghijklmnopqrstuvwxyz
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'abcdefghijklmnopqrstuvwxyz' is not defined
>>> s = 'abcdefghijklmnopqrstuvwxyz'
>>>
>>>
>>>
>>>
>>> s
'abcdefghijklmnopqrstuvwxyz'
>>>
>>> s[4]
'e'
>>> len(s)
26
>>> s[4]
'e'
>>> s[10]
'k'
>>>
>>> s[4:11:1]
'efghijk'
>>> s[4:11]
'efghijk'
>>> s[4:11:2]
'egik'
>>>
>>>
>>>
>>>
>>>
>>>
>>> l
[22, 22, 23, 32, 32, 43, 66, 100, 100, 100, 101, 102, 103, 104, 554]
>>> l[5]
43
>>> l[5:]
[43, 66, 100, 100, 100, 101, 102, 103, 104, 554]
>>> l[:5]
[22, 22, 23, 32, 32]
>>> l[5:10]
[43, 66, 100, 100, 100]
>>> l[5:15]
[43, 66, 100, 100, 100, 101, 102, 103, 104, 554]
>>> l[5:15:2]
[43, 100, 100, 102, 104]
>>>
>>>
>>>
>>> l[-1]
554
>>> l
[22, 22, 23, 32, 32, 43, 66, 100, 100, 100, 101, 102, 103, 104, 554]
>>>
>>>
>>> l[-1:-8:-1]
[554, 104, 103, 102, 101, 100, 100]
>>> l[14]
554
>>> l[14:5:-1]
[554, 104, 103, 102, 101, 100, 100, 100, 66]
>>> l[::-1]-
  File "<stdin>", line 1
    l[::-1]-
           ^
SyntaxError: invalid syntax
>>> l[::-1]
[554, 104, 103, 102, 101, 100, 100, 100, 66, 43, 32, 32, 23, 22, 22]
>>>
>>>
>>>
>>>
>>> s
'abcdefghijklmnopqrstuvwxyz'
>>> s[::-1]
'zyxwvutsrqponmlkjihgfedcba'
>>>
>>>
>>>
>>> l
[22, 22, 23, 32, 32, 43, 66, 100, 100, 100, 101, 102, 103, 104, 554]
>>> m
['Python', 'is', 'an', 'amazing', 'language']
>>> n = l+m
>>> n
[22, 22, 23, 32, 32, 43, 66, 100, 100, 100, 101, 102, 103, 104, 554, 'Python', 'is', 'an', 'amazing', 'language']
>>>
>>>
>>> l
[22, 22, 23, 32, 32, 43, 66, 100, 100, 100, 101, 102, 103, 104, 554]
>>> l = l + [12]
>>> l
[22, 22, 23, 32, 32, 43, 66, 100, 100, 100, 101, 102, 103, 104, 554, 12]
>>> l = l + [14,34,34221]
>>> l
[22, 22, 23, 32, 32, 43, 66, 100, 100, 100, 101, 102, 103, 104, 554, 12, 14, 34, 34221]
>>>
>>>